# cmake-example

./: CMakeLists.txt  Makefile  generate-sources.py  main.cpp  test.py
ansi-color/src/: CMakeLists.txt
check-state/src/: CMakeLists.txt
functions/: CMakeLists.txt
indentation/src/: CMakeLists.txt
lib/: CMakeLists.txt  greeting.cpp
message-contexts/src/: CMakeLists.txt
message-contexts/src/bar/: CMakeLists.txt
message-contexts/src/foo/: CMakeLists.txt
modules/: CMakeLists.txt
modules/cmake/: Func.cmake
multi-config/src/: CMakeLists.txt
packaging/: CMakeLists.txt
profiling/src/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp  message.cpp
src/cache_variables/: CMakeLists.txt
src/cmake/: dependencies.cmake
src/environment_variables/: CMakeLists.txt
src/include/: message.h  shared_lib.h  static_lib.h
src/include/module/: module.h
src/include/seam/: seam_iface.h
src/include/shared/: shared.h
src/include/static/: static.h
src/lib/: CMakeLists.txt  Day21SampleConfig.cmake.in  message.cpp  shared_lib.cpp  static_lib.cpp  util.cpp
src/lib/middle/: CMakeLists.txt  middle.cpp
src/lib/module/: CMakeLists.txt  module.cpp
src/lib/seam/: CMakeLists.txt  seam_impl.cpp
src/lib/shared/: CMakeLists.txt  shared.cpp
src/lib/static/: CMakeLists.txt  static.cpp
src/mock/: CMakeLists.txt
src/mock/middle/: CMakeLists.txt  middle_stub.cpp
src/mock/seam/: CMakeLists.txt  seam_stub.cpp
src/normal_variables/: CMakeLists.txt
src/predefined_variables/: CMakeLists.txt
src/predefined_variables/subdir/: CMakeLists.txt
src/test/: CMakeLists.txt  test_main.cpp
toolchain/: x86_64-w64-mingw32.cmake
variable-expansion/: CMakeLists.txt
variable-scope/: CMakeLists.txt
watch-variable/src/: CMakeLists.txt
